Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24109

Pinned debugger tooltips do not move with extra editor windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4: Low P4: Low
    • None
    • Qt Creator 4.12.1, Qt Creator 14.0.2
    • Debugger
    • None
    • b04271108 (master)

      • open project, set breakpoint, start debugging
      • open an extra editor window with the document with the breakpoint (Split > Open in New Window)
      • pin a debugger tool tip
      • move the extra editor window around

      Expected: the tool tip moves with it
      Actual: the tool tip stays where it is on the screen

      It works correctly with tool tips while in the main editor window.

      (DebuggerToolTipManagerPrivate::eventFilter handles movement of the main editor window, but not of extra windows.)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ansemkiv Andrii Semkiv
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes