Debugger: Tooltips in secondary windows

Debugger tooltips are no longer unconditionally bound
to the main editor window.
They are now moved with the text editor window they appear in.

Fixes: QTCREATORBUG-24109
Change-Id: I7fd34f0717a30ec8a86c37e8dd16c1ea9512e1b5
Reviewed-by: Eike Ziller <eike.ziller@qt.io>